cmake_minimum_required(VERSION 3.12)
set(PROJECT_NAME AdventOfCode)
project(${PROJECT_NAME} VERSION 2022)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
add_executable(day1 "${CMAKE_CURRENT_SOURCE_DIR}/src/day1.cpp")
add_executable(day1_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day1_2.cpp")
add_executable(day2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day2.cpp")
add_executable(day2_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day2_2.cpp")
add_executable(day3 "${CMAKE_CURRENT_SOURCE_DIR}/src/day3.cpp")
add_executable(day3_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day3_2.cpp")
add_executable(day4 "${CMAKE_CURRENT_SOURCE_DIR}/src/day4.cpp")
add_executable(day4_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day4_2.cpp")
add_executable(day5 "${CMAKE_CURRENT_SOURCE_DIR}/src/day5.cpp")
add_executable(day5_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day5_2.cpp")
add_executable(day6 "${CMAKE_CURRENT_SOURCE_DIR}/src/day6.cpp")
add_executable(day6_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day6_2.cpp")
add_executable(day7 "${CMAKE_CURRENT_SOURCE_DIR}/src/day7.cpp")
add_executable(day7_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day7_2.cpp")
add_executable(day8 "${CMAKE_CURRENT_SOURCE_DIR}/src/day8.cpp")
add_executable(day8_2 "${CMAKE_CURRENT_SOURCE_DIR}/src/day8_2.cpp")

set_target_properties(day1 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day1_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day2_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day3 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day3_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day4 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day4_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day5 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day5_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day6 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day6_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day7 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day7_2 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day8 PROPERTIES OUTPUT_NAME "aoc")
set_target_properties(day8_2 PROPERTIES OUTPUT_NAME "aoc")